Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
     </div>
   </div>
 
-  <footer class="small" style="grid-column:1/-1">Hecho con ❤️ — copia y pega este archivo donde quieras</footer>
+  <footer class="small" style="grid-column:1/-1">Hecho con ❤️</footer>
 
 <script>
 /* ============================
